--- a/litreview.bib
+++ b/litreview.bib
@@ -361,3 +361,12 @@
     title = {{Data Science} University of Wisconsin},
     howpublished = {\url{http://datasciencedegree.wisconsin.edu/data-science/what-is-big-data/}},
 }
+
+@article{laney20013d,
+    title={3D data management: Controlling data volume, velocity and variety},
+    author={Laney, Doug},
+    journal={META Group Research Note},
+    volume={6},
+    pages={70},
+    year={2001}
+}
