--- a/litreview.bib
+++ b/litreview.bib
@@ -406,3 +406,15 @@
     year = {2015},
     note = {DOI: 10.6028/NIST.SP.1500-1},
 }
+
+@article{berners-lee_semantic_2001,
+    title = {The semantic web},
+    volume = {284},
+    url = {https://pdfs.semanticscholar.org/566c/1c6bd366b4c9e07fc37eb372771690d5ba31.pdf},
+    number = {5},
+    urldate = {2017-01-31},
+    journal = {Scientific american},
+    author = {Berners-Lee, Tim and Hendler, James and Lassila, Ora and {others}},
+    year = {2001},
+    pages = {28--37},
+}
