--- a/litreview.tex
+++ b/litreview.tex
@@ -92,6 +92,10 @@ Laney describes data variety as data that is in ``incompatible formats, non-alig
 
 The definition of the 4 V's have been updated over the years in the following ways. The volume is data is expanding faster than ever before. According to IBM\cite{ibm}, ``90\% of the world's data has been created in the past two years'' and the current data volume is 2.7 zettabytes and is expected to double every two years\cite{uwis}.
 
+\subsection{Features of Big Data}
+NIST\cite{nist_big_data_2015} provides us with a list common features of big data. One common feature of big data is associated metadata. Metadata is data about data that includes information about how/when/where the data was collected and processed. Metadata describing the history of data provides for data provenance. This becomes more important as data is transfered between many processes with multiple transformations. Provenance provides a means to track how data was transferred and how it was transformed. Semantic metadata is an attempt at providing metadata with the ability of describing itself. Examples of semantic metadata include the Semantic Web\cite{berners-lee_semantic_2001} and NIST's Big Data Paradigm. 
+
+Another common feature of big data is that is can often be unstructured, semi-structured, or non-relational data.
 
 \subsection{Examples of Big Data}
 
