--- a/litreview.bib
+++ b/litreview.bib
@@ -418,3 +418,24 @@
     year = {2001},
     pages = {28--37},
 }
+
+
+@article{gantz_extracting_2011,
+	title = {Extracting value from chaos},
+	volume = {1142},
+	url = {https://www.emcgrandprix.com/collateral/analyst-reports/idc-extracting-value-from-chaos-ar.pdf},
+	urldate = {2016-11-08},
+	journal = {IDC iview},
+	author = {Gantz, John and Reinsel, David},
+	year = {2011},
+	pages = {1--12},
+}
+
+@misc{meeker_2013,
+	title = {Internet Trends D11 Conference},
+	url = {http://www.slideshare.net/kleinerperkins/kpcb-internet-trends-2013},
+	urldate = {2013-05-29},
+	author = {Meeker, Mary and Wu, Lang},
+	year = {2013},
+	pages = {1--117},
+}
