--- a/litreview.bib
+++ b/litreview.bib
@@ -439,3 +439,18 @@
 	year = {2013},
 	pages = {1--117},
 }
+
+
+@misc{destiche, 
+	title={Fleet Tracking Devices will be Installed in 22,000 UPS Trucks to Cut Costs and Improve Driver Efficiency in 2010}, url={http://www.fieldtechnologies.com/news/gps-tracking-systems-installed-in-ups-trucks-driver-efficiency}, journal={FieldLogix},
+	year={2010},
+	author={Destiche, Aurielle}} 
+
+@misc{medicaid, 
+	title={FraudPreventionToolkit}, url={https://www.cms.gov/Outreach-and-Education/Outreach/Partnerships/FraudPreventionToolkit.html}, 
+	journal={Centers for Medicare & Medicaid Services}}
+
+@article{ibm_healthcare, 
+	title={Smarter Healthcare in Canada: Redefining Value and Success}, url={https://www.longwoods.com/product/download/code/23368y},
+	year={2012},
+	author={IBM Canada}} 
