Expanded big data and better tie ins to cloud computing

--- a/litreview.bib
+++ b/litreview.bib
@@ -454,3 +454,74 @@
 	title={Smarter Healthcare in Canada: Redefining Value and Success}, url={https://www.longwoods.com/product/download/code/23368y},
 	year={2012},
 	author={IBM Canada}} 
+
+
+@article{hashem_role_2016,
+	title = {The role of big data in smart city},
+	volume = {36},
+	issn = {02684012},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S0268401216302778},
+	doi = {10.1016/j.ijinfomgt.2016.05.002},
+	language = {en},
+	number = {5},
+	urldate = {2016-11-01},
+	journal = {International Journal of Information Management},
+	author = {Hashem, Ibrahim Abaker Targio and Chang, Victor and Anuar, Nor Badrul and Adewole, Kayode and Yaqoob, Ibrar and Gani, Abdullah and Ahmed, Ejaz and Chiroma, Haruna},
+	month = oct,
+	year = {2016},
+	pages = {748--758},
+}
+
+@article{lai2015big,
+	title={Big Data Analytics for Smart Grid},
+	author={Lai, Chun Sing and McCulloch, Malcolm D},
+	journal={Newsletter},
+	year={2015}
+}
+
+@article{al2015applications,
+	title={Applications of big data to smart cities},
+	author={Al Nuaimi, Eiman and Al Neyadi, Hind and Mohamed, Nader and Al-Jaroodi, Jameela},
+	journal={Journal of Internet Services and Applications},
+	volume={6},
+	number={1},
+	pages={25},
+	year={2015},
+	publisher={Springer London}
+}
+
+@inproceedings{roy2007middleware,
+	title={A middleware framework for ambiguous context mediation in smart healthcare application},
+	author={Roy, Nirmalya and Pallapa, Gautham and Das, Sajal K},
+	booktitle={Wireless and Mobile Computing, Networking and Communications, 2007. WiMOB 2007. Third IEEE International Conference on},
+	pages={72--72},
+	year={2007},
+	organization={IEEE}
+}
+
+
+
+@article {ADMA,
+	author = {Ju, Guannan and Cheng, Mengjiao and Xiao, Meng and Xu, Jianmei and Pan, Kai and Wang, Xing and Zhang, Yajun and Shi, Feng},
+	title = {Smart Transportation Between Three Phases Through a Stimulus-Responsive Functionally Cooperating Device},
+	journal = {Advanced Materials},
+	volume = {25},
+	number = {21},
+	publisher = {WILEY-VCH Verlag},
+	issn = {1521-4095},
+	url = {http://dx.doi.org/10.1002/adma.201205240},
+	doi = {10.1002/adma.201205240},
+	pages = {2915--2919},
+	keywords = {smart transportation, functionally cooperating devices, temperature-responsive polymers, superhydrophilicity, superhydrophobicity},
+	year = {2013},
+}
+
+@article{manyika2011big,
+	title={Big data: The next frontier for innovation, competition, and productivity},
+	author={Manyika, James and Chui, Michael and Brown, Brad and Bughin, Jacques and Dobbs, Richard and Roxburgh, Charles and Byers, Angela H},
+	year={2011}
+}
+
+@misc{marr_2015, title={Why only one of the 5 Vs of big data really matters}, url={http://www.ibmbigdatahub.com/blog/why-only-one-5-vs-big-data-really-matters}, journal={IBM Big Data & Analytics Hub}, publisher={IBM Big Data}, author={Marr, Benard}, year={2015}, month={Mar}}
+
+
