cloud computing slightly expanded

--- a/litreview.bib
+++ b/litreview.bib
@@ -524,4 +524,103 @@
 
 @misc{marr_2015, title={Why only one of the 5 Vs of big data really matters}, url={http://www.ibmbigdatahub.com/blog/why-only-one-5-vs-big-data-really-matters}, journal={IBM Big Data & Analytics Hub}, publisher={IBM Big Data}, author={Marr, Benard}, year={2015}, month={Mar}}
 
+@article{wang_mobile_survey_2015,
+	title = {A survey of mobile cloud computing applications: perspectives and challenges},
+	volume = {80},
+	shorttitle = {A survey of mobile cloud computing applications},
+	url = {http://link.springer.com/article/10.1007/s11277-014-2102-7},
+	number = {4},
+	urldate = {2016-11-01},
+	journal = {Wireless Personal Communications},
+	author = {Wang, Yating and Chen, Ray and Wang, Ding-Chau},
+	year = {2015},
+	pages = {1607--1623},
+}
 
+
+@article{campbell_rise_2008,
+	title = {The rise of people-centric sensing},
+	volume = {12},
+	url = {http://ieeexplore.ieee.org/abstract/document/4557974/},
+	number = {4},
+	urldate = {2017-02-01},
+	journal = {IEEE Internet Computing},
+	author = {Campbell, Andrew T. and Eisenman, Shane B. and Lane, Nicholas D. and Miluzzo, Emiliano and Peterson, Ronald A. and Lu, Hong and Zheng, Xiao and Musolesi, Mirco and Fodor, KristÃ³f and Ahn, Gahng-Seop},
+	year = {2008},
+}
+
+
+@inproceedings{satyanarayanan_mobile_2010,
+	title = {Mobile computing: the next decade},
+	shorttitle = {Mobile computing},
+	url = {http://dl.acm.org/citation.cfm?id=1810936},
+	urldate = {2017-02-01},
+	booktitle = {Proceedings of the 1st {ACM} workshop on mobile cloud computing \& services: social networks and beyond},
+	publisher = {ACM},
+	author = {Satyanarayanan, Mahadev},
+	year = {2010},
+	pages = {5},
+}
+
+
+@inproceedings{lu_soundsense:_2009,
+	title = {{SoundSense}: scalable sound sensing for people-centric applications on mobile phones},
+	shorttitle = {{SoundSense}},
+	url = {http://dl.acm.org/citation.cfm?id=1555834},
+	urldate = {2017-02-01},
+	booktitle = {Proceedings of the 7th international conference on {Mobile} systems, applications, and services},
+	publisher = {ACM},
+	author = {Lu, Hong and Pan, Wei and Lane, Nicholas D. and Choudhury, Tanzeem and Campbell, Andrew T.},
+	year = {2009},
+	pages = {165--178},
+}
+
+@inproceedings{thiagarajan_vtrack:_2009,
+	title = {{VTrack}: accurate, energy-aware road traffic delay estimation using mobile phones},
+	isbn = {978-1-60558-519-2},
+	shorttitle = {{VTrack}},
+	url = {http://portal.acm.org/citation.cfm?doid=1644038.1644048},
+	doi = {10.1145/1644038.1644048},
+	language = {en},
+	urldate = {2017-02-01},
+	publisher = {ACM Press},
+	author = {Thiagarajan, Arvind and Ravindranath, Lenin and LaCurts, Katrina and Madden, Samuel and Balakrishnan, Hari and Toledo, Sivan and Eriksson, Jakob},
+	year = {2009},
+	pages = {85},
+}
+
+
+@inproceedings{herring_using_2010,
+	title = {Using mobile phones to forecast arterial traffic through statistical learning},
+	url = {http://www.academia.edu/download/3249847/trb10a.pdf},
+	urldate = {2017-02-01},
+	booktitle = {89th {Transportation} {Research} {Board} {Annual} {Meeting}},
+	author = {Herring, Ryan and Hofleitner, Aude and Amin, Saurabh and Nasr, T. and Khalek, A. and Abbeel, Pieter and Bayen, Alexandre},
+	year = {2010},
+	pages = {10--2493},
+}
+
+
+@inproceedings{hunter_scaling_2011,
+	title = {Scaling the mobile millennium system in the cloud},
+	url = {http://dl.acm.org/citation.cfm?id=2038944},
+	urldate = {2017-02-01},
+	booktitle = {Proceedings of the 2nd {ACM} {Symposium} on {Cloud} {Computing}},
+	publisher = {ACM},
+	author = {Hunter, Timothy and Moldovan, Teodor and Zaharia, Matei and Merzgui, Samy and Ma, Justin and Franklin, Michael J. and Abbeel, Pieter and Bayen, Alexandre M.},
+	year = {2011},
+	pages = {28},
+}
+
+
+@inproceedings{barbera_offload_2013,
+	title = {To offload or not to offload? the bandwidth and energy costs of mobile cloud computing},
+	shorttitle = {To offload or not to offload?},
+	url = {http://ieeexplore.ieee.org/abstract/document/6566921/},
+	urldate = {2017-02-01},
+	booktitle = {{INFOCOM}, 2013 {Proceedings} {IEEE}},
+	publisher = {IEEE},
+	author = {Barbera, Marco V. and Kosta, Sokol and Mei, Alessandro and Stefa, Julinda},
+	year = {2013},
+	pages = {1285--1293},
+}
